fix scrollbar color too dark in chrome

--- a/obsidianhtml/src/html/layouts/main_documentation.css
+++ b/obsidianhtml/src/html/layouts/main_documentation.css
@@ -36,13 +36,14 @@
     border-radius: 0 0 0 1rem;
     cursor: pointer;
 }
+
 ::-webkit-scrollbar {
-    width: 0.4rem;
+    width: 0.3rem;
     height: 0.4rem;
     background-color: #ffffff; /* or add it to the track */
   }
 ::-webkit-scrollbar-thumb{
-    background-color: #7c7f8c;
+    background-color: __accent_color__12;
     border: 0px;
     border-radius: 10px;
 }
